k8s/totem-express-db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: totem-express-db
  labels:
    app: totem-express-db
spec:
  selector:
    matchLabels:
      app: totem-express-db
  serviceName: totem-express-db
  replicas: 1
  template:
    metadata:
      name: totem-express-db
      labels:
        app: totem-express-db
    spec:
      containers:
        - name: totem-express-db
          image: 924978846501.dkr.ecr.us-east-1.amazonaws.com/totem_express:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
