k8s/totem-express-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: totem-express-db-svc
spec:
  type: ClusterIP
  selector:
    app: totem-express-db
  ports:
    - port: 3306
      targetPort: 3306
